# mavewaf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  cliff.toml  cosign.pub  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  i2pd.conf  maverick.asc  torrc  tunnels.conf
.forgejo/workflows/: beta.yml  ci.yml  release.yml
docs/: .env.example  README.md
examples/: mock_backend.rs
src/: config.rs  core.rs  features.rs  lib.rs  main.rs  security.rs  test_utils.rs  utils.rs  web.rs
src/config/: error.rs  settings.rs
src/core/: middleware.rs  proxy.rs
src/core/middleware/: ratelimit.rs  session.rs
src/core/proxy/: challenge.rs  headers.rs  listener.rs  pool.rs  protocol.rs  response.rs  router.rs  service.rs
src/features/: tor.rs  webhook.rs
src/features/tor/: circuit.rs  control.rs
src/security/: captcha.rs  crypto.rs  defense.rs  waf.rs
src/security/captcha/: generator.rs  manager.rs
src/security/crypto/: cookie.rs
src/security/defense/: monitor.rs
src/security/waf/: engine.rs  rules.rs
src/utils/: signatures.rs
src/web/: ui.rs
src/web/ui/: pages.rs
templates/: access.html  captcha.html  error.html  queue.html
tests/: integration.rs  integration_tests.rs  queue.rs
tests/common/: mod.rs
tests/suites/: anonymity.rs  captcha.rs  defense.rs  general.rs  mod.rs  protocol.rs  queue.rs  waf.rs
