[package]
name = "mavewaf"
version = "0.2.11"
edition = "2024"
description = "High-performance reverse proxy and WAF for hidden services"
repository = "https://git.mrmave.work/maverick/mavewaf"
license = "AGPL-3.0-only"
keywords = ["tor", "i2p", "waf", "reverse-proxy", "captcha", "hidden-service"]
categories = ["network-programming", "web-programming::http-server"]


[lib]
name = "mavewaf"
path = "src/lib.rs"



[dependencies]
ab_glyph = "0.2.32"
aes-gcm = "0.10.3"
aho-corasick = "1.1.4"
async-compression = { version = "0.4.36", features = ["tokio", "gzip", "brotli"] }
async-trait = "0.1.89"
async_chunked_transfer = "1.4.0"
base64 = "0.22.1"
bytes = "1.11.0"
deadpool = { version = "0.12.3", features = ["rt_tokio_1"] }
dotenvy = "0.15.7"
hmac = "0.12.1"
image = { version = "0.25.9", default-features = false, features = ["webp", "png", "jpeg"] }
imageproc = "0.25.0"
libinjectionrs = "0.1.1"
papaya = "0.2.3"
path-clean = "1.0.1"
percent-encoding = "2.3.2"
pingora = { version = "0.6.0", features = ["proxy"] }
pingora-limits = "0.6.0"
proxy-header = "0.1.2"
rand = "0.9.2"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = "2.5.7"

[dev-dependencies]
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
